[project]
name = "market-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.8.0",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "praw>=7.8.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
